Neo4j - Ensure a transaction is always present for querying