@@ -71,6 +71,7 @@ dependencies {
 test {
     maxParallelForks = 2
     forkEvery = 10
+//    jvmArgs = ['-server', '-Xmx768M', '-XX:MaxPermSize=256m','-Dgorm_neo4j_test_mode=server']
     jvmArgs = ['-server', '-Xmx768M', '-XX:MaxPermSize=256m']
     afterSuite {
         System.out.print('.')
